# anim_tice

./: .gitignore  M3_G05_Ruler_Construct_Segments_And_Lines.py  M3_G06_Parallelism_Perpendicularity.py  M3_G07_standard_shapes_properties.py  M3_L01_Numbers0to999_PrereqReview.py  M3_L04_FractionsRepresentationAndReading.py  M3_L07_EquivalentFractions.py  M3_L13_AddingFractionsSameDenominator.py  M3_L14_MeterUnitMeasurement.py  M3_L15_PerimeterOfStandardShapes.py  M3_L16_DivisionAsSharing.py  M3_L17_ComparisonWordProblems.py  M3_L18_ProblemSolvingWithModeling.py  M3_L19_FindWholeFromEqualParts.py  M3_L20_SolvingDivisionProblems.py  M3_L21_DivisionFindPartValue.py  M3_L22_DivisionSemanticSwitch.py  M3_L23_ChangeProblems.py  M3_L24_TwoStepChangeProblems.py  M3_L25_ImagineAndWriteBarModel.py  M3_L26_represent_parts_on_bar_models.py  M3_N09_multiplication_tables_6_7.py  README.md  README.txt  pyproject.toml  requirements.txt
docs/: ARCHITECTURE_MAP.md  BASECLASS_API.md  LESSON_TEMPLATE.md  REFACTOR_PLAN.md
src/anim_tice/: core.py
